Login Features changed, added POS webelement

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-url=http://52.39.162.23/web/database/selector
+url=http://52.39.162.23
 browser=chrome
 
-username=in_pos_manager@info.com
+email=in_pos_manager@info.com
 password=KjKtfgrs30
